add initial welcome screen design

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <script src="script.js"></script>
 </head>
 <body>
-  
+  <div id="welcome-container">
+    <img id="treasure-map-blank" src="images\treasure-map-blank.png">
+  <div class="welcome-screen centered-welcome">
+    <h1 id="game-title">TREASURE HUNT</h1>
+    <p id="game-intro">Embark on an quest<br>to see who finds the most treasure!</p>
+    <button id="start">START GAME</button>
+  </div>
+</div>
 </body>
 </html>
