add styling to welcome page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <img id="treasure-map-blank" src="images\treasure-map-blank.png">
   <div class="welcome-screen centered-welcome">
     <h1 id="game-title">TREASURE HUNT</h1>
-    <p id="game-intro">Embark on an quest<br>to see who finds the most treasure!</p>
-    <button id="start">START GAME</button>
+    <p id="game-intro">Embark on a quest to see<br>who finds the most treasure!</p>
+    <button id="start">START</button>
   </div>
 </div>
 </body>
