add features to enter name section

--- a/index.html
+++ b/index.html
@@ -20,16 +20,22 @@
 
 <div class="gameplay-container">
   <div id="gameplay-area" class="section">
-    <!-- <p class="enter-name">What is your name?</p>
+    <p id="entered-name">What is your name?</p>
+    <img src="images\treasure-hunt-props.jpg" id="name-screen-image">
+    <br>
     <input placeholder="enter name here" required id="name-input" class="enter-name">
-    <button id="submit-name" class="enter-name gameplay-button">Submit</button> -->
-    <!-- <img src="images\treasure-hunt-props.jpg" id="name-screen-image enter-name"> -->
+    <button id="submit-name" class="enter-name gameplay-button">Submit</button>
+    <br>
     <button id="quit-game" class="main-button"><a href="#">QUIT GAME</a></button>
   </div>
-
+  </div>
+  <div class="gameplay-container2">
+    <div id="gameplay-area2" class="section">
+    
+    </div>
   </div>
   <div id="game-over" class="section">
-    Game over screen
+    Game over screen will go here
     <button id="quit-game" class="main-button"><a href="#">QUIT GAME</a></button>
   </div>
 </body>
