add main quit button remove static quit buttons

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <script defer src="script.js"></script>
 </head>
 <body>
+  <div id="floating-quit">
+    <button id="quit-game" class="main-button"><a href="#">QUIT GAME</a></button>
+  </div>
   <div id="welcome-container" class="section">
     <img id="treasure-map-blank" src="images\treasure-map-blank.png">
   <div class="welcome-screen centered-welcome">
@@ -25,18 +28,14 @@
     <br>
     <input placeholder="enter name here" required id="name-input" class="enter-name">
     <button id="submit-name" class="enter-name gameplay-button">Submit</button>
-    <br>
-    <button id="quit-game" class="main-button"><a href="#">QUIT GAME</a></button>
   </div>
   </div>
   <div class="gameplay-container2">
     <div id="gameplay-area2" class="section">
-    
     </div>
   </div>
   <div id="game-over" class="section">
     Game over screen will go here
-    <button id="quit-game" class="main-button"><a href="#">QUIT GAME</a></button>
   </div>
 </body>
 </html>
