add game round announcement

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="gameplay-container">
   <div id="gameplay-area" class="section">
-    <p id="entered-name">What is your name?</p>
+    <p id="entered-name" class="game-text">What is your name?</p>
     <img src="images\treasure-hunt-props.jpg" id="name-screen-image">
     <br>
     <input placeholder="enter name here" required id="name-input" class="enter-name">
@@ -32,6 +32,8 @@
   </div>
   <div class="gameplay-container2">
     <div id="gameplay-area2" class="section">
+      <p id="game-round" class="game-text"></p>
+      <button id="game-play" class="main-button">PLAY</button>
     </div>
   </div>
   <div id="game-over" class="section">
