add randomize button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
   <div class="gameplay-container2">
     <div id="gameplay-area2" class="section">
-      <p id="game-round" class="game-text"></p>
+      <p id="game-round" class="game-text">Click Play to Continue</p>
       <button id="game-play" class="main-button">PLAY</button>
     </div>
   </div>
