update gameplay area background

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   </div>
 </div>
 
-<div class="gameplay-container">
+<div class="gameplay-container" class="section">
   <div id="gameplay-area" class="section">
     <p id="entered-name" class="game-text">What is your name?</p>
-    <img src="images\treasure-hunt-props.jpg" id="name-screen-image">
+    <img src="images\treasure-hunt-props.png" id="name-screen-image">
     <br>
     <input placeholder="enter name here" required id="name-input" class="enter-name">
     <button id="submit-name" class="enter-name gameplay-button">Submit</button>
@@ -33,6 +33,8 @@
   <div class="gameplay-container2">
     <div id="gameplay-area2" class="section">
       <p id="game-round" class="game-text">Click Play to Continue</p>
+      <img src="images\treasure-map-cartoon.png" width="30%">
+      <br>
       <button id="game-play" class="main-button">PLAY</button>
     </div>
   </div>
