fix end game functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="floating-quit">
-    <button id="quit-game" class="main-button"><a href="#">QUIT GAME</a></button>
+    <button id="quit-game" class="main-button dark"><a href="#">QUIT GAME</a></button>
   </div>
   <div id="welcome-container" class="section">
     <img id="treasure-map-blank" src="images\treasure-map-blank.png">
@@ -26,14 +26,14 @@
     <p id="entered-name" class="game-text">What is your name?</p>
     <img src="images\treasure-hunt-props.png" id="name-screen-image">
     <br>
-    <input placeholder="enter name here" required id="name-input" class="enter-name">
-    <button id="submit-name" class="enter-name gameplay-button">Submit</button>
+    <input placeholder="enter name here" required id="name-input" class="enter-name dark">
+    <button id="submit-name" class="enter-name gameplay-button dark">Submit</button>
   </div>
   </div>
   <div class="gameplay-container2">
     <div id="gameplay-area2" class="section">
       <p id="game-round" class="game-text">Click Play to Continue</p>
-      <img src="images\treasure-map-cartoon.png" width="30%">
+      <img src="images\treasure-map-cartoon.png" width="30%" id="cartoonMap">
       <br>
       <button id="game-play" class="main-button">PLAY</button>
     </div>
