added continue buttons

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="gameplay-container2">
     <div id="gameplay-area2" class="section">
       <p id="game-round" class="game-text">Click Play to Continue</p>
-      <img src="images\treasure-map-cartoon.png" width="30%" id="cartoonMap">
+      <img src="images\treasure-map-cartoon.png" id="cartoonMap">
       <br>
       <button id="game-play" class="main-button">PLAY</button>
     </div>
