add end game functionality

--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@
   </div>
   <div class="gameplay-container2">
     <div id="gameplay-area2" class="section">
-      <p id="game-round" class="game-text">Click Play to Continue</p>
+      <p id="game-round" class="game-text">Find as much treasure as you can in 20 Rounds.<br>Click Play to Continue</p>
       <img src="images\treasure-map-cartoon.png" id="cartoonMap">
       <br>
       <button id="game-play" class="main-button">PLAY</button>
     </div>
   </div>
-  <div id="game-over" class="section">
-    Game over screen will go here
+  <div id="game-over-container">
+    <div id="gameplay-area3" class="section">
+    <button id="final-quit-game" class="main-button dark hidden"><a href="#">QUIT GAME</a></button>
   </div>
+</div>
 </body>
 </html>
