--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="welcome-screen centered-welcome">
     <h1 id="game-title">TREASURE HUNT</h1>
     <p id="game-intro">Embark on a quest to see<br>who finds the most treasure!</p>
-    <button id="next-enter-name" class="main-button" onclick="location.href='/index.html#gameplay-area'">START GAME</button>
+    <button id="next-enter-name" class="main-button" onclick="location.href='\index.html#gameplay-area'">START GAME</button>
   </div>
 </div>
 
